--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -17824,6 +17824,10 @@ body:not(.desktop) .ps__rail-y {
   line-height: 1.5rem;
 }
 
+.pnotify-action-bar {
+  margin-top: 1rem;
+}
+
 .mdi {
   line-height: 1;
 }
