Improved display of images in the list view

--- a/public_html/layouts/basic/styles/userPreferences/_RowHeight.scss
+++ b/public_html/layouts/basic/styles/userPreferences/_RowHeight.scss
@@ -15,7 +15,9 @@ td.listViewEntryValue.medium {
 	&:not(.listButtons) {
 		padding: calculate-rem(10px);
 	}
-	&[data-field-type="text"] {
+	&[data-field-type="text"],
+	&[data-field-type="image"],
+	&[data-field-type="multiImage"] {
 		padding: 0;
 	}
 }
@@ -26,7 +28,9 @@ td.listViewEntryValue.narrow {
 	&:not(.listButtons) {
 		padding: calculate-rem(6px);
 	}
-	&[data-field-type="text"] {
+	&[data-field-type="text"],
+	&[data-field-type="image"],
+	&[data-field-type="multiImage"] {
 		padding: 0;
 	}
 }
