--- a/public_html/layouts/basic/styles/userPreferences/_RowHeight.scss
+++ b/public_html/layouts/basic/styles/userPreferences/_RowHeight.scss
@@ -127,6 +127,9 @@ table {
 		}
 		.c-badge__icon {
 			font-size: calculate-rem(10px);
+			width: calculate-rem(22px);
+			height: calculate-rem(22px);
+			line-height: calculate-rem(19px);
 		}
 	}
 }
