Improved tree view in products

--- a/public_html/layouts/basic/styles/_Style.scss
+++ b/public_html/layouts/basic/styles/_Style.scss
@@ -1634,6 +1634,7 @@ table tr td .input-sm {
 
 tr.summaryViewEntries,
 #detailView table,
+#recordsListContents table,
 table.listViewEntriesTable {
 	font-size: calculate-rem(13px);
 }
