--- a/public_html/layouts/resources/icons/yfm.css
+++ b/public_html/layouts/resources/icons/yfm.css
@@ -1,8 +1,8 @@
 @font-face {
 	font-family: 'yfm';
-	src: url('fonts/yfm.eot?2rnjyy');
-	src: url('fonts/yfm.eot?2rnjyy#iefix') format('embedded-opentype'), url('fonts/yfm.ttf?2rnjyy') format('truetype'),
-		url('fonts/yfm.woff?2rnjyy') format('woff'), url('fonts/yfm.svg?2rnjyy#yfm') format('svg');
+	src: url('fonts/yfm.eot?i2hwdd');
+	src: url('fonts/yfm.eot?i2hwdd#iefix') format('embedded-opentype'), url('fonts/yfm.ttf?i2hwdd') format('truetype'),
+		url('fonts/yfm.woff?i2hwdd') format('woff'), url('fonts/yfm.svg?i2hwdd#yfm') format('svg');
 	font-weight: normal;
 	font-style: normal;
 	font-display: block;
@@ -26,6 +26,9 @@
 [class^='yfm-']:before,
 [class*=' yfm-']:before {
 	content: '\e972';
+}
+.yfm-Passwords:before {
+	content: '\e983';
 }
 .yfm-Queue:before {
 	content: '\e982';
@@ -56,6 +59,9 @@
 }
 .yfm-Occurrences:before {
 	content: '\e97a';
+}
+.yfm-DefaultIcon:before {
+	content: '\e972';
 }
 .yfm-Announcements:before {
 	content: '\e904';
