--- a/public_html/layouts/basic/styles/components/_Utilities.scss
+++ b/public_html/layouts/basic/styles/components/_Utilities.scss
@@ -536,8 +536,8 @@
 	color: #fff;
 }
 
-.u-bg-modern {
-	background-color: #0d9605 !important;
+.u-bg-blue {
+	background-color: #0078d4 !important;
 }
 
 .u-bg-gray {
