--- a/public_html/layouts/basic/skins/blue/style.css
+++ b/public_html/layouts/basic/skins/blue/style.css
@@ -2,12 +2,6 @@
 header.navbar {
 	background: #0078d4;
 }
-.o-global-search__value,
-.o-global-search__input span.select2-selection,
-.o-global-search__input .bg-white {
-	background: #b3d7f2 !important;
-	border: unset;
-}
 .c-menu__container  .modulesList a {
 	color: #616161 !important;
 }
@@ -28,4 +22,8 @@ header.navbar {
 }
 .c-menu__item .tpl-menu-SubMenu a {
 	background: #d0d0d0 !important;
+}
+.c-menu__item .tpl-menu-SubMenu a.active, .c-menu__item .tpl-menu-Profile_submenu a.active{
+	background: #0078d4 !important;
+	color: #fff !important;
 }
