--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -17628,6 +17628,10 @@ header .c-header__btn__container .select2-selection:hover .select2-selection__re
   vertical-align: middle;
 }
 
+.select2-container--bootstrap .select2-selection--multiple {
+  max-height: 69px;
+  overflow: auto;
+}
 .select2-container--bootstrap .select2-selection--multiple .select2-selection__choice + .select2-search--inline .select2-search__field {
   min-width: 0;
   padding: 0;
@@ -18780,10 +18784,6 @@ hr {
   text-align: center;
   font-size: 1rem;
   padding: 5% 0;
-}
-
-.filterConditionsDiv {
-  padding-bottom: 0;
 }
 
 .conditionGroup .header {
