Improved TOTP code verification (GUI)

--- a/public_html/layouts/basic/modules/Users/Login.css
+++ b/public_html/layouts/basic/modules/Users/Login.css
@@ -150,3 +150,11 @@ select.form-control {
 .fontSizeIcon {
 	font-size: 60px !important;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none !important;
+	margin: 0 !important;
+}
+input[type='number'] {
+	-moz-appearance: textfield;
+}
