Added new field type: Attachments

--- a/public_html/layouts/basic/styles/Main.scss
+++ b/public_html/layouts/basic/styles/Main.scss
@@ -24,6 +24,7 @@
 @import "components/_Buttons";
 @import "components/_Checkbox";
 @import "components/_ConditionBuilder";
+@import "components/_Fields";
 //-------- layout --------//
 @import "layout/_Base";
 @import "layout/_Header";
