--- a/public_html/layouts/basic/styles/libraries/_FullCalendar.scss
+++ b/public_html/layouts/basic/styles/libraries/_FullCalendar.scss
@@ -258,6 +258,9 @@
 		margin: auto !important;
 	}
 }
+.fc-unthemed td {
+	border-color: #ddd !important;
+}
 
 .fc-event {
 	color: #353c44 !important;
