--- a/public_html/layouts/basic/styles/libraries/_Libraries.scss
+++ b/public_html/layouts/basic/styles/libraries/_Libraries.scss
@@ -560,8 +560,9 @@ body:not(.desktop) {
 		background-color: #d15d5d;
 		border-color: #d15d5d;
 	}
-	.pnotify-title {
-		font-size: 1.4rem;
+	.pnotify-icon {
+		font-size: 3rem;
+		margin: 12px 10px 10px 0;
 	}
 }
 //-------- Material Design Icons --------//
