--- a/public_html/layouts/basic/styles/pages/_Calendar.scss
+++ b/public_html/layouts/basic/styles/pages/_Calendar.scss
@@ -148,9 +148,20 @@ $h-calendar-form-actions: calculate-rem(49px);
 		background: $count-badge-color;
 	}
 
+	.fc-v-event,
+	.fc-h-event {
+		color: white;
+		.fc-event-main {
+			color: inherit;
+		}
+	}
+
 	.o-calendar {
 		&__container {
 			@extend .pt-0;
+		}
+		&__filter {
+			display: flex;
 		}
 
 		&__clear-btn,
@@ -198,20 +209,15 @@ $h-calendar-form-actions: calculate-rem(49px);
 				padding: 6px 3px;
 				height: 100%;
 			}
-
 			.sub-record-content.active {
-				background-color: inherit !important;
-				cursor: default;
+				border-width: 2px;
+				border-bottom-width: 0px;
 			}
 		}
 
 		.sub-date-name {
 			margin-bottom: 2px;
 		}
-	}
-
-	.fc-state-default .fc-button-effect {
-		top: 100% !important;
 	}
 
 	.fc-event-style1 {
@@ -330,10 +336,9 @@ $h-calendar-form-actions: calculate-rem(49px);
 		overflow-y: visible !important;
 	}
 
-	.fc-button {
+	.fc .fc-button {
 		/* FullCalendar buttons */
 		display: inline-block;
-		padding: 6px 0.4em !important;
 		margin-bottom: 0;
 		font-size: 14px;
 		font-weight: normal;
@@ -360,7 +365,7 @@ $h-calendar-form-actions: calculate-rem(49px);
 			}
 		}
 
-		&.fc-state-active .fc-button-inner .fc-button-content,
+		&.fc-button-active .fc-button-inner .fc-button-content,
 		&:active .fc-button-inner .fc-button-content {
 			color: #000 !important;
 			background: transparent;
@@ -373,7 +378,7 @@ $h-calendar-form-actions: calculate-rem(49px);
 		line-height: 20px;
 	}
 
-	.fc-widget-header {
+	.fc-col-header-cell {
 		th {
 			padding: 4px 0 !important;
 		}
@@ -420,11 +425,11 @@ $h-calendar-form-actions: calculate-rem(49px);
 				height: calculate-rem(30px) !important;
 				border: none;
 				box-shadow: none;
-				padding: calculate-rem(5px) calculate-rem(18px) !important;
+				padding: calculate-rem(5px) calculate-rem(10px) !important;
 			}
 
-			.fc-state-active,
-			.fc-today-button.fc-state-disabled {
+			.fc-button-active,
+			.fc-today-button:disabled {
 				z-index: 4;
 				background: #337ab7 !important;
 				color: #fff !important;
@@ -444,7 +449,7 @@ $h-calendar-form-actions: calculate-rem(49px);
 				box-shadow: none;
 				padding: 0;
 
-				&.fc-state-disabled {
+				&:disabled {
 					text-shadow: none;
 					cursor: unset;
 					opacity: 1;
@@ -472,6 +477,8 @@ $h-calendar-form-actions: calculate-rem(49px);
 					background: none;
 					border: none;
 					box-shadow: none;
+					color: #000;
+					padding: 0 5px;
 				}
 
 				display: flex;
@@ -482,6 +489,14 @@ $h-calendar-form-actions: calculate-rem(49px);
 					margin-top: calculate-rem(3px);
 					text-transform: uppercase;
 				}
+			}
+			.fc-prev-button span,
+			.fc-prevYear-button span {
+				margin-bottom: 4px;
+			}
+			.fc-next-button span,
+			.fc-nextYear-button span {
+				margin-top: 4px;
 			}
 		}
 	}
@@ -499,14 +514,16 @@ $h-calendar-form-actions: calculate-rem(49px);
 		min-height: 9em !important;
 	}
 
-	.fc-day-top {
-		.fc-day-number {
+	.fc-daygrid-day-top {
+		.fc-daygrid-day-number {
 			font-weight: bold;
-			font-size: 24px;
+			font-size: 20px;
+			line-height: 1.1;
 			color: #c1c1c1;
+			padding: 0 2px;
 		}
 
-		&.fc-today {
+		&.fc-day-today {
 			.fc-day-number {
 				color: #546e7a;
 			}
@@ -579,7 +596,7 @@ $h-calendar-form-actions: calculate-rem(49px);
 				min-height: 2.5em;
 			}
 
-			.fc-day-header.fc-widget-header {
+			.fc-col-header-cell {
 				padding: calculate-rem(2px) 0 !important;
 				font-size: $year-month-font-size;
 				background: $year-month-border-color;
@@ -877,6 +894,6 @@ $h-calendar-form-actions: calculate-rem(49px);
 	right: 0;
 }
 
-.fc-day-top.fc-mon {
+.fc-daygrid-top.fc-mon {
 	position: relative;
 }
