--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -7171,7 +7171,7 @@ button.bg-dark:focus {
   border-left: 1px solid #dee2e6 !important;
 }
 
-.border-0, .dashboardWidgetCalendar .fc-head-container.fc-widget-header {
+.border-0, .dashboardWidgetCalendar .fc-col-header-cell {
   border: 0 !important;
 }
 
@@ -15595,6 +15595,13 @@ h3 {
   width: 1em;
 }
 
+.fi-xx {
+  background-image: url(../../../libraries/flag-icons/flags//4x3/xx.svg);
+}
+.fi-xx.fis {
+  background-image: url(../../../libraries/flag-icons/flags//1x1/xx.svg);
+}
+
 .fi-ad {
   background-image: url(../../../libraries/flag-icons/flags//4x3/ad.svg);
 }
@@ -17443,13 +17450,6 @@ h3 {
   background-image: url(../../../libraries/flag-icons/flags//1x1/xk.svg);
 }
 
-.fi-xx {
-  background-image: url(../../../libraries/flag-icons/flags//4x3/xx.svg);
-}
-.fi-xx.fis {
-  background-image: url(../../../libraries/flag-icons/flags//1x1/xx.svg);
-}
-
 /* {[The file is published on the basis of YetiForce Public License 5.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
 @media (max-width: 767.98px) {
   .daterangepicker.show-calendar.js-visible {
@@ -18031,10 +18031,6 @@ label.btn[class*=btn-outline-]:not(.active):hover {
   min-height: 3.1rem !important;
   height: 3.1rem !important;
 }
-.fc-state-default .fc-button-effect {
-  top: 100% !important;
-}
-
 .fc-event-style1 {
   background: #17309a;
   border-color: #17309a;
@@ -18137,9 +18133,8 @@ label.btn[class*=btn-outline-]:not(.active):hover {
   color: #000;
 }
 
-.fc-button {
+.fc .fc-button {
   display: inline-block;
-  padding: 0.375rem 0.75rem !important;
   margin-bottom: 0;
   font-weight: normal;
   line-height: 1.5;
@@ -18157,13 +18152,13 @@ label.btn[class*=btn-outline-]:not(.active):hover {
   border: 1px solid transparent;
   border-radius: 4px;
 }
-.fc-button:active .fc-button-inner {
+.fc .fc-button:active .fc-button-inner {
   background: transparent;
 }
-.fc-button:active .fc-button-inner .fc-button-content {
+.fc .fc-button:active .fc-button-inner .fc-button-content {
   color: #fff;
 }
-.fc-button.fc-state-active .fc-button-inner .fc-button-content, .fc-button:active .fc-button-inner .fc-button-content {
+.fc .fc-button.fc-button-active .fc-button-inner .fc-button-content, .fc .fc-button:active .fc-button-inner .fc-button-content {
   color: #000 !important;
   background: transparent;
   background-image: none;
@@ -18174,13 +18169,12 @@ label.btn[class*=btn-outline-]:not(.active):hover {
   line-height: 20px;
 }
 
-.fc-widget-header {
-  color: #666;
+.fc-col-header-cell {
   background: #f8f9fa;
   border-color: #ccc;
 }
-.fc-widget-header th {
-  padding: 4px 0 !important;
+.fc-col-header-cell a {
+  color: #666;
 }
 
 .fc-content {
@@ -18198,10 +18192,6 @@ label.btn[class*=btn-outline-]:not(.active):hover {
 }
 .fc-content td:hover {
   background: #f3f3f3;
-}
-
-.fc-state-default .fc-button-effect span {
-  background: none;
 }
 
 .fc button {
@@ -18245,7 +18235,7 @@ label.btn[class*=btn-outline-]:not(.active):hover {
     line-height: 1;
   }
 
-  .c-calendar-quickcreate .fc-day-top .fc-day-number {
+  .c-calendar-quickcreate .fc-daygrid-day-top .fc-daygrid-day-number {
     font-size: 20px;
   }
 
@@ -18255,10 +18245,6 @@ label.btn[class*=btn-outline-]:not(.active):hover {
 }
 .fc-unthemed td {
   border-color: #ddd !important;
-}
-
-.fc-event {
-  color: #353c44 !important;
 }
 
 /* {[The file is published on the basis of YetiForce Public License 5.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
@@ -26604,6 +26590,22 @@ ul.c-process-line li.c-process-line__active > a:after {
   color: #fff;
   background: #ef9a9a;
 }
+.c-calendar-view .fc-v-event,
+.c-calendar-view .fc-h-event,
+.c-calendar-quickcreate .fc-v-event,
+.c-calendar-quickcreate .fc-h-event {
+  color: white;
+}
+.c-calendar-view .fc-v-event .fc-event-main,
+.c-calendar-view .fc-h-event .fc-event-main,
+.c-calendar-quickcreate .fc-v-event .fc-event-main,
+.c-calendar-quickcreate .fc-h-event .fc-event-main {
+  color: inherit;
+}
+.c-calendar-view .o-calendar__filter,
+.c-calendar-quickcreate .o-calendar__filter {
+  display: flex;
+}
 .c-calendar-view .o-calendar__clear-btn, .c-calendar-view .o-calendar__view-btn,
 .c-calendar-quickcreate .o-calendar__clear-btn,
 .c-calendar-quickcreate .o-calendar__view-btn {
@@ -26644,16 +26646,12 @@ ul.c-process-line li.c-process-line__active > a:after {
 }
 .c-calendar-view .sub-date-list .sub-record .sub-record-content.active,
 .c-calendar-quickcreate .sub-date-list .sub-record .sub-record-content.active {
-  background-color: inherit !important;
-  cursor: default;
+  border-width: 2px;
+  border-bottom-width: 0px;
 }
 .c-calendar-view .sub-date-list .sub-date-name,
 .c-calendar-quickcreate .sub-date-list .sub-date-name {
   margin-bottom: 2px;
-}
-.c-calendar-view .fc-state-default .fc-button-effect,
-.c-calendar-quickcreate .fc-state-default .fc-button-effect {
-  top: 100% !important;
 }
 .c-calendar-view .fc-event-style1,
 .c-calendar-quickcreate .fc-event-style1 {
@@ -26771,11 +26769,10 @@ ul.c-process-line li.c-process-line__active > a:after {
 .c-calendar-quickcreate .fc-agenda-divider + div {
   overflow-y: visible !important;
 }
-.c-calendar-view .fc-button,
-.c-calendar-quickcreate .fc-button {
+.c-calendar-view .fc .fc-button,
+.c-calendar-quickcreate .fc .fc-button {
   /* FullCalendar buttons */
   display: inline-block;
-  padding: 6px 0.4em !important;
   margin-bottom: 0;
   font-size: 14px;
   font-weight: normal;
@@ -26794,17 +26791,17 @@ ul.c-process-line li.c-process-line__active > a:after {
   border: 1px solid transparent;
   border-radius: 0 !important;
 }
-.c-calendar-view .fc-button:active .fc-button-inner,
-.c-calendar-quickcreate .fc-button:active .fc-button-inner {
+.c-calendar-view .fc .fc-button:active .fc-button-inner,
+.c-calendar-quickcreate .fc .fc-button:active .fc-button-inner {
   background: transparent;
 }
-.c-calendar-view .fc-button:active .fc-button-inner .fc-button-content,
-.c-calendar-quickcreate .fc-button:active .fc-button-inner .fc-button-content {
+.c-calendar-view .fc .fc-button:active .fc-button-inner .fc-button-content,
+.c-calendar-quickcreate .fc .fc-button:active .fc-button-inner .fc-button-content {
   color: #fff;
 }
-.c-calendar-view .fc-button.fc-state-active .fc-button-inner .fc-button-content, .c-calendar-view .fc-button:active .fc-button-inner .fc-button-content,
-.c-calendar-quickcreate .fc-button.fc-state-active .fc-button-inner .fc-button-content,
-.c-calendar-quickcreate .fc-button:active .fc-button-inner .fc-button-content {
+.c-calendar-view .fc .fc-button.fc-button-active .fc-button-inner .fc-button-content, .c-calendar-view .fc .fc-button:active .fc-button-inner .fc-button-content,
+.c-calendar-quickcreate .fc .fc-button.fc-button-active .fc-button-inner .fc-button-content,
+.c-calendar-quickcreate .fc .fc-button:active .fc-button-inner .fc-button-content {
   color: #000 !important;
   background: transparent;
   background-image: none;
@@ -26814,15 +26811,15 @@ ul.c-process-line li.c-process-line__active > a:after {
   font-size: 15px;
   line-height: 20px;
 }
-.c-calendar-view .fc-widget-header,
-.c-calendar-quickcreate .fc-widget-header {
+.c-calendar-view .fc-col-header-cell,
+.c-calendar-quickcreate .fc-col-header-cell {
   color: #666;
   font-weight: 400;
   background: #eee;
   border-color: #ccc;
 }
-.c-calendar-view .fc-widget-header th,
-.c-calendar-quickcreate .fc-widget-header th {
+.c-calendar-view .fc-col-header-cell th,
+.c-calendar-quickcreate .fc-col-header-cell th {
   padding: 4px 0 !important;
 }
 .c-calendar-view .fc-content,
@@ -26860,12 +26857,12 @@ ul.c-process-line li.c-process-line__active > a:after {
   height: 1.875rem !important;
   border: none;
   box-shadow: none;
-  padding: 0.3125rem 1.125rem !important;
+  padding: 0.3125rem 0.625rem !important;
 }
-.c-calendar-view .fc-toolbar .fc-left .fc-state-active,
-.c-calendar-view .fc-toolbar .fc-left .fc-today-button.fc-state-disabled,
-.c-calendar-quickcreate .fc-toolbar .fc-left .fc-state-active,
-.c-calendar-quickcreate .fc-toolbar .fc-left .fc-today-button.fc-state-disabled {
+.c-calendar-view .fc-toolbar .fc-left .fc-button-active,
+.c-calendar-view .fc-toolbar .fc-left .fc-today-button:disabled,
+.c-calendar-quickcreate .fc-toolbar .fc-left .fc-button-active,
+.c-calendar-quickcreate .fc-toolbar .fc-left .fc-today-button:disabled {
   z-index: 4;
   background: #337ab7 !important;
   color: #fff !important;
@@ -26883,14 +26880,14 @@ ul.c-process-line li.c-process-line__active > a:after {
   box-shadow: none;
   padding: 0;
 }
-.c-calendar-view .fc-toolbar .fc-right .fc-today-button.fc-state-disabled,
-.c-calendar-quickcreate .fc-toolbar .fc-right .fc-today-button.fc-state-disabled {
+.c-calendar-view .fc-toolbar .fc-right .fc-today-button:disabled,
+.c-calendar-quickcreate .fc-toolbar .fc-right .fc-today-button:disabled {
   text-shadow: none;
   cursor: unset;
   opacity: 1;
 }
-.c-calendar-view .fc-toolbar .fc-right .fc-today-button.fc-state-disabled .svg-inline--fa,
-.c-calendar-quickcreate .fc-toolbar .fc-right .fc-today-button.fc-state-disabled .svg-inline--fa {
+.c-calendar-view .fc-toolbar .fc-right .fc-today-button:disabled .svg-inline--fa,
+.c-calendar-quickcreate .fc-toolbar .fc-right .fc-today-button:disabled .svg-inline--fa {
   color: #9e9e9e;
 }
 @media (min-width: 1080px) {
@@ -26913,6 +26910,8 @@ ul.c-process-line li.c-process-line__active > a:after {
   background: none;
   border: none;
   box-shadow: none;
+  color: #000;
+  padding: 0 5px;
 }
 .c-calendar-view .fc-toolbar .fc-center div h2,
 .c-calendar-quickcreate .fc-toolbar .fc-center div h2 {
@@ -26920,6 +26919,18 @@ ul.c-process-line li.c-process-line__active > a:after {
   margin-left: 0.3125rem;
   margin-top: 0.1875rem;
   text-transform: uppercase;
+}
+.c-calendar-view .fc-toolbar .fc-center .fc-prev-button span,
+.c-calendar-view .fc-toolbar .fc-center .fc-prevYear-button span,
+.c-calendar-quickcreate .fc-toolbar .fc-center .fc-prev-button span,
+.c-calendar-quickcreate .fc-toolbar .fc-center .fc-prevYear-button span {
+  margin-bottom: 4px;
+}
+.c-calendar-view .fc-toolbar .fc-center .fc-next-button span,
+.c-calendar-view .fc-toolbar .fc-center .fc-nextYear-button span,
+.c-calendar-quickcreate .fc-toolbar .fc-center .fc-next-button span,
+.c-calendar-quickcreate .fc-toolbar .fc-center .fc-nextYear-button span {
+  margin-top: 4px;
 }
 .c-calendar-view .fc-time-grid .fc-time-grid-event.fc-event,
 .c-calendar-quickcreate .fc-time-grid .fc-time-grid-event.fc-event {
@@ -26934,14 +26945,16 @@ ul.c-process-line li.c-process-line__active > a:after {
 .c-calendar-quickcreate .bottom_margin .fc-basic-view .fc-body .fc-row {
   min-height: 9em !important;
 }
-.c-calendar-view .fc-day-top .fc-day-number,
-.c-calendar-quickcreate .fc-day-top .fc-day-number {
+.c-calendar-view .fc-daygrid-day-top .fc-daygrid-day-number,
+.c-calendar-quickcreate .fc-daygrid-day-top .fc-daygrid-day-number {
   font-weight: bold;
-  font-size: 24px;
+  font-size: 20px;
+  line-height: 1.1;
   color: #c1c1c1;
+  padding: 0 2px;
 }
-.c-calendar-view .fc-day-top.fc-today .fc-day-number,
-.c-calendar-quickcreate .fc-day-top.fc-today .fc-day-number {
+.c-calendar-view .fc-daygrid-day-top.fc-day-today .fc-day-number,
+.c-calendar-quickcreate .fc-daygrid-day-top.fc-day-today .fc-day-number {
   color: #546e7a;
 }
 .c-calendar-view .fc-year__container,
@@ -27002,8 +27015,8 @@ ul.c-process-line li.c-process-line__active > a:after {
 .c-calendar-quickcreate .fc-year__month .fc-basic-view .fc-body .fc-row {
   min-height: 2.5em;
 }
-.c-calendar-view .fc-year__month .fc-day-header.fc-widget-header,
-.c-calendar-quickcreate .fc-year__month .fc-day-header.fc-widget-header {
+.c-calendar-view .fc-year__month .fc-col-header-cell,
+.c-calendar-quickcreate .fc-year__month .fc-col-header-cell {
   padding: 0.125rem 0 !important;
   font-size: 0.75rem;
   background: #f3f3f3;
@@ -27280,7 +27293,7 @@ ul.c-process-line li.c-process-line__active > a:after {
   right: 0;
 }
 
-.fc-day-top.fc-mon {
+.fc-daygrid-top.fc-mon {
   position: relative;
 }
 
