--- a/public_html/layouts/basic/styles/pages/_Calendar.scss
+++ b/public_html/layouts/basic/styles/pages/_Calendar.scss
@@ -20,6 +20,9 @@ $h-calendar-form-actions: calculate-rem(49px);
 
 .o-calendar__container {
 	@extend .pt-2;
+	.fc-header-toolbar.fc-toolbar {
+		overflow: unset !important;
+	}
 }
 
 .o-label-container {
@@ -92,6 +95,9 @@ $h-calendar-form-actions: calculate-rem(49px);
 @include media-breakpoint-down(md) {
 	.siteBarRight {
 		width: auto !important;
+	}
+	.hideSiteBar {
+		right: 0 !important;
 	}
 }
 
