--- a/public_html/layouts/basic/styles/pages/_List.scss
+++ b/public_html/layouts/basic/styles/pages/_List.scss
@@ -92,12 +92,12 @@
 
 .table th {
 	background-color: $light;
-	background-image: -moz-linear-gradient(top, #f6f6f6, #f3f3f4);
-	background-image: -ms-linear-gradient(top, #f6f6f6, #f3f3f4);
+	background-image: -moz-linear-gradient(to top, #f6f6f6, #f3f3f4);
+	background-image: -ms-linear-gradient(to top, #f6f6f6, #f3f3f4);
 	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f6f6f6), to(#f3f3f4));
-	background-image: -webkit-linear-gradient(top, #f6f6f6, #f3f3f4);
-	background-image: -o-linear-gradient(top, #f6f6f6, #f3f3f4);
-	background-image: linear-gradient(top, #f6f6f6, #f3f3f4);
+	background-image: -webkit-linear-gradient(to top, #f6f6f6, #f3f3f4);
+	background-image: -o-linear-gradient(to top, #f6f6f6, #f3f3f4);
+	background-image: linear-gradient(to top, #f6f6f6, #f3f3f4);
 	background-repeat: repeat-x;
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#f3f3f4', GradientType=0);
 }
@@ -128,12 +128,12 @@ td.fieldValue {
 
 	.listViewHeaders th {
 		background-color: $light;
-		background-image: -moz-linear-gradient(top, #f6f6f6, #f3f3f4);
-		background-image: -ms-linear-gradient(top, #f6f6f6, #f3f3f4);
+		background-image: -moz-linear-gradient(to top, #f6f6f6, #f3f3f4);
+		background-image: -ms-linear-gradient(to top, #f6f6f6, #f3f3f4);
 		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f6f6f6), to(#f3f3f4));
-		background-image: -webkit-linear-gradient(top, #f6f6f6, #f3f3f4);
-		background-image: -o-linear-gradient(top, #f6f6f6, #f3f3f4);
-		background-image: linear-gradient(top, #f6f6f6, #f3f3f4);
+		background-image: -webkit-linear-gradient(to top, #f6f6f6, #f3f3f4);
+		background-image: -o-linear-gradient(to top, #f6f6f6, #f3f3f4);
+		background-image: linear-gradient(to top, #f6f6f6, #f3f3f4);
 		background-repeat: repeat-x;
 		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#f3f3f4', GradientType=0);
 		border-color: #f3f3f4 #f3f3f4 #cbcbcf;
