--- a/public_html/layouts/basic/styles/Main.scss
+++ b/public_html/layouts/basic/styles/Main.scss
@@ -39,6 +39,7 @@
 @import "pages/_List";
 @import "pages/_ListPreview";
 @import "pages/_Kanban";
+@import "pages/Tiles";
 
 //-------- settings --------//
 @import "pages/Settings/_Dashboard";
