--- a/public_html/layouts/basic/styles/components/_Utilities.scss
+++ b/public_html/layouts/basic/styles/components/_Utilities.scss
@@ -190,7 +190,7 @@
 }
 
 .u-word-break {
-	overflow-wrap: break-word !important;
+	overflow-wrap: anywhere !important;
 }
 
 .u-word-break-keep-all {
