--- a/public_html/layouts/basic/styles/components/_Global.scss
+++ b/public_html/layouts/basic/styles/components/_Global.scss
@@ -159,24 +159,28 @@ body:not(.desktop) {
 		@extend .d-inline-flex;
 	}
 }
-
-.c-multi-image__preview-img {
-	height: 2rem;
-	width: 2rem;
-	cursor: pointer;
-	background-size: cover;
-	background-position: center;
+.c-multi-image {
+	&__preview-img {
+		height: 2rem;
+		width: 2rem;
+		cursor: pointer;
+		background-size: cover;
+		background-position: center;
+	}
+	&__popover-img {
+		cursor: pointer;
+	}
+	&__drop-effect {
+		background: rgba($blue, 0.2);
+		border: $border-width solid rgba($blue, 0.5) !important;
+	}
+	&__btn-narrow {
+		.c-multi-image__preview-img {
+			height: 1.5rem !important;
+			width: 1.5rem !important;
+		}
+	}
 }
-
-.c-multi-image__popover-img {
-	cursor: pointer;
-}
-
-.c-multi-image__drop-effect {
-	background: rgba($blue, 0.2);
-	border: $border-width solid rgba($blue, 0.5) !important;
-}
-
 .c-btn-collapsible {
 	overflow: hidden;
 	white-space: nowrap;
