Changed the order in which the knowledge base is displayed

--- a/public_html/layouts/basic/styles/libraries/_Quasar.scss
+++ b/public_html/layouts/basic/styles/libraries/_Quasar.scss
@@ -17,6 +17,7 @@ body > .q-dialog:not(.quasar-reset) {
 	.q-field .col {
 		position: relative;
 	}
+	z-index: 1050 !important;
 }
 
 .quasar-container {
