WCAG on Login page

--- a/public_html/layouts/basic/styles/_Variables.scss
+++ b/public_html/layouts/basic/styles/_Variables.scss
@@ -5,7 +5,7 @@
 
 //-------- override libraries' variables --------//
 //bootstrap
-$link-color: #0072da;
+$link-color: #0061BD;
 $primary: #0072da;
 $success: #3eac33;
 $danger: #d15d5d;
